# simple-contract

./: README.md  cabal.project  simple-contract.cabal
src/: Contract.hs  Main.hs
