Cabal-Version: 2.4
Name: simple-contract
Version: 0.1.0.0
Build-Type:          Simple
License:             Apache-2.0
License-files:       LICENSE

executable contract
    main-is:          Main.hs
    hs-source-dirs:   src
    other-modules: Contract
    default-language: Haskell2010
    default-extensions: ImportQualifiedPost
    ghc-options: -Wall -fobject-code -fno-ignore-interface-pragmas
                 -fno-omit-interface-pragmas -fno-strictness
                 -fno-spec-constr -fno-specialise -threaded

    build-depends:  aeson
                  , ansi-terminal
                  , base >=4.9 && <5
                  , containers
                  , data-default
                  , freer-extras
                  , freer-simple
                  , lens
                  , foldl
                  , openapi3
                  , playground-common
                  , plutus-contract
                  , plutus-ledger
                  , plutus-ledger-constraints
                  , plutus-ledger-api
                  , plutus-pab
                  , plutus-tx
                  , plutus-tx-plugin
                  , prettyprinter
                  , purescript-bridge
                  , row-types
                  , servant-purescript
                  , text
                  , serialise
                  , bytestring
